plugins {
  id 'org.springframework.boot' version '2.4.2'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

group = 'com.atg'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
 
}

repositories {
  mavenCentral()
}

ext {
  set('springCloudVersion', "2020.0.1")
}
tasks.withType( JavaCompile ).configureEach {
            options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
        }
dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web','org.springframework.boot:spring-boot-starter-jdbc', 'org.springframework.hateoas:spring-hateoas'
  compileOnly 'org.projectlombok:lombok'
  runtimeOnly 'com.h2database:h2'
  annotationProcessor 'org.projectlombok:lombok'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  testImplementation 'org.springframework.boot:spring-boot-starter-test','org.junit.jupiter:junit-jupiter-api:5.4.2','org.junit.jupiter:junit-jupiter-engine:5.4.2',  'org.junit.platform:junit-platform-runner:1.5.2'
  
  }
  

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

test {
  useJUnitPlatform()
}
